tooltip margins and scrollbar fixed.

--- a/app/components/ColumnTooltip.scss
+++ b/app/components/ColumnTooltip.scss
@@ -8,7 +8,8 @@
   max-width:322px;
   min-height:110px;
   max-height:342px;
-  overflow:scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   border:1px solid #ccc;
   background-color: #fff;
   opacity: 1;
@@ -20,12 +21,12 @@
 
 .listContainer {
   position:relative;
-  margin:-48px 0 0 10px;
+  margin:-15px 0 0 10px;
   padding-left: 5px;
   text-indent: -4px;
 }
 
 .separator { 
   position:relative; 
-  top:-20px;
+  top:-5px;
 }
