--- a/app/components/ColumnTooltipListItem.scss
+++ b/app/components/ColumnTooltipListItem.scss
@@ -5,13 +5,6 @@
   cursor: pointer;
 }
 
-.listContainer {
-  position:relative;
-  margin:-48px 0 0 10px;
-  padding-left: 5px;
-  text-indent: -4px;
-}
-
 .listItem {
   margin-bottom:-10px;
 }
