--- a/app/styles/Fonts.scss
+++ b/app/styles/Fonts.scss
@@ -122,7 +122,7 @@ $fira-sans-extra-condensed-semibold: 'Fira Sans Extra Condensed', sans-serif;
   font-size: 10pt;
   font-weight: bold;
   fill: $black;
-  margin: 0.5em 0 0 10px;
+  margin: 5px 0 0 10px;
   padding: 0;
 
   // WET Override
